--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,7 +3,7 @@ name: Scheduled Python Script
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # This example runs the job daily at midnight UTC 3:00PM
+    - cron: '30 3 * * *'  # This example runs the job daily at midnight UTC 3:00PM
 
 jobs:
   run-python-script:
@@ -18,6 +18,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9  # You can specify the Python version you need
+      
+      - name: install pandas
+        run: pip install pandas requests datetime os
       
       - name: Run Python Script
         run: python auto_script.py
