--- a/.github/workflows/gso_auto.yml
+++ b/.github/workflows/gso_auto.yml
@@ -6,38 +6,38 @@ on:
     - cron: '40 * * * *' # Execute the task at 40 minutes past every hour.
 
 jobs:
+
   run-python-script:
     runs-on: ubuntu-latest
     name: Run Python Script
-
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        
-      - name: Set up Node.js and Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9  # Set the desired Python version
 
-      - name: Set up Node.js and Python
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20  # Set the desired Node.js version
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: |
-          pip install pandas requests datetime pytz urllib3
-          pip install --upgrade pip
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
 
-      - name: Run Python Script
-        run: |
-          python gso_auto.py
-          cd data_gso
-          git config --global user.email "booluckgmie@gmail.com"
-          git config --global user.name "booluckgmie"
-          git pull
-          git add .
-          git commit -m "Update data"
-          git push --force  # Use the --force flag to forcefully push changes
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20
 
+    - name: Install dependencies
+      run: |
+        pip install pandas requests pytz urllib3
+        pip install --upgrade pip
 
+    - name: Run Python Script
+      run: |
+        python gso_auto.py
+        cd data_gso
+        git config --global user.email "booluckgmie@gmail.com"
+        git config --global user.name "booluckgmie"
+        git pull
+        git add .
+        git commit -m "Update data"
+        git push --force  # Use the --force flag to forcefully push changes
