--- a/.github/workflows/gso_auto.yml
+++ b/.github/workflows/gso_auto.yml
@@ -2,8 +2,10 @@
 name: Scheduled Python Script for GSO
 
 on:
-  branches:
-  - master
+  pull_request:
+    types: closed
+    branches:
+      - master
   
   schedule:
     - cron: '40 * * * *' # Execute the task at 40 minutes past every hour.
