--- a/.github/workflows/weather_cron.yml
+++ b/.github/workflows/weather_cron.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         
-      - name: Set up Node.js and Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.9  # Set the desired Python version
