--- a/.github/workflows/weather_cron.yml
+++ b/.github/workflows/weather_cron.yml
@@ -2,8 +2,8 @@
 name: Scheduled Python Script for Unofficial Weather Forecast https://open-meteo.com/
 
 on:
-  push:
-    branches: [ master ] 
+  # push:
+  #   branches: [ master ] 
   schedule:
     - cron: '40 * * * *' 
     
